     declarative, is used in a context where it is
     exported to the columns collection of an enclosing
     select() construct, or if any construct involving
     that column is compiled before its name is 
     assigned.

   - as_scalar(), label() can be called on a selectable
     which contains a Column that is not yet named.
     [ticket:1862]

- declarative
   - @classproperty (soon/now @mapperproperty) takes effect for 
     __mapper_args__, __table_args__, __tablename__ on 
     a base class that is not a mixin, as well as mixins.
     [ticket:1922]
     
- engine
   
   - Fixed a regression in 0.6.4 whereby the change that
     allowed cursor errors to be raised consistently broke
     the result.lastrowid accessor.   Test coverage has
     been added for result.lastrowid.   Note that lastrowid
     is only supported by Pysqlite and some MySQL drivers,
     so isn't super-useful in the general case.
   
   - the logging message emitted by the engine when
     a connection is first used is now "BEGIN (implicit)" 
     to emphasize that DBAPI has no explicit begin().
     
0.6.4
=====
- orm
  - The name ConcurrentModificationError has been
    changed to StaleDataError, and descriptive 
    error messages have been revised to reflect
    exactly what the issue is.   Both names will
    remain available for the forseeable future
    for schemes that may be specifying 
    ConcurrentModificationError in an "except:"
    clause.

  - Added a mutex to the identity map which mutexes
    remove operations against iteration methods,
    which now pre-buffer before returning an 
    iterable.   This because asyncrhonous gc 
    can remove items via the gc thread at any time.
    [ticket:1891]
    
  - The Session class is now present in sqlalchemy.orm.*.
    We're moving away from the usage of create_session(),
    which has non-standard defaults, for those situations
    where a one-step Session constructor is desired. Most